syntax = "proto3";

package weaver.storage;

import "weaver.proto";

service Storage {
  rpc AllocateVolume(AllocateVolumeRequest) returns (AllocateVolumeResponse) {}
  rpc WriteNeedle(stream WriteNeedleRequest) returns (WriteNeedleResponse) {}
  rpc ReadNeedle(ReadNeedleRequest) returns (stream ReadNeedleResponse) {}
}

message AllocateVolumeRequest {
  uint32 volume_id = 1;
  string bucket = 2;
  int64 preallocate = 3;
  ReplicaReplacement replica_replacement = 4;
  string ttl = 5;
  uint32 memory_map_max_size_mb = 6;
}

message AllocateVolumeResponse { weaver.Status status = 1; }

message WriteNeedleRequest {
  uint64 volume_id = 1;
  weaver.NeedleHeader needle_header = 2;
  bytes content = 3;
}

message WriteNeedleResponse {}

message ReadNeedleRequest {
  uint64 volume_id = 1;
  uint64 needle_id = 2;
  uint64 cookie = 3;
}

message ReadNeedleResponse {
  uint64 volume_id = 1;
  uint64 needle_id = 2;
  uint64 offset = 3;
  uint64 size = 4;
  bytes content = 5;
}
